add: more features

--- a/POS/Form1.resx
+++ b/POS/Form1.resx
@@ -387,4 +387,148 @@
         NwEtuxtHvF/A+cH5wflZ2L359P+IYUiSoTvQ4AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="backHistory.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAD45JREFUeF7tnXnQd+UYx0u7CFHaiESyToOUskUpW00kS2TfZc++FxlL2UIKEUJk
+        J8NEJtEmJIZEkpK0yJYUn+/kNU91vc/7PL/nt9znnM9n5vPPO/POPL9zn/s659z3dV/XSiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIi2zNt4Cb403w+uhiPSc6+Mj8Wg8C8/Fk/EA3AJFpKdsiYfhZfif
+        wgSC7VBEesRauBf+BKuJP9fjcGMUkR5wO/wgLu+pf23/jc9AEekwa+Kj8TSsJvp8fhhXQxHpIJvjwfgX
+        rCb4ivwK3gBFpEOsgXvgKVhN7IX6DVwHRaQjbIbvxkuxmtSL0QAg0hFWx93xRKwm8ygaAEQ6wKZ4IF6M
+        1UQeVQOASMNkhf7heAJWE3ipGgBEGiX5+2/Di7CavOPQACDSGKviQ/B4vAqriTsuDQAiDZHU3LfghVhN
+        2HFrABBpgDz1d8bk50/6qT9XA4DIjNkQ98MLsJqkk9QAIDIjVsEd8Vi8EqsJOmkNACIz4Ob4ejwfq4k5
+        LQ0AIlMk5bh2wG9hjuNWk3KaGgBEpsT6+Bo8D6vJOAsNACITZmW8Lx6DLTz152oAEJkgqcL7CkxBzmoC
+        zloDgMgEyFN/e/wqXoHV5GtBA4DImFkX98VzsJp0LWkAEBkj2+KX8F9YTbjWNACIjIGb4Ivwt1hNtFY1
+        AIgska0x3Xcux2qStawBQGREboT7YNpuVZOrCxoAREbgbngU/hOridUVDQAiiyCT5Tl4JlYTqmsaAEQW
+        yFZ4JHb9qT9XA4DICkjnnPTQ+yVWk6jLGgBE5uEu+An8B1YTqOsaAEQK1san4M+xmjh90QAgci3uiIfj
+        37GaNH3SACDyP66PT8SfYTVZ+qgBQAS2xPTK/ytWE6WvGgBk0KyFe+FPsJogfdcAIINlCzwEL8NqcgxB
+        A4AMjjXxMXgaVpNiSBoAZFBsjgfjX7CaEEPTACCDYA3cA0/BaiIMVQOA9J7N8D14KVaTYMgaAKS3rI67
+        40lY3fxqAJCecis8EC/G6sbXqzUASK9YDXfFH2B1w+s1/TomA1Kk89wS34YXYXWz63VN2vMT8O64MabM
+        2aoo0hlywz4Uj8ersLrRtTbXK4eeLsRfYZqWHoqvxsfhdrgppupx1lREmmITPABzA1c3uI5uKh/lbeo3
+        eBzmhOQbcG+8J26ASaUWmTp56u+MuTF96k/XND1JwD0dP4sJCntiiqekF6JvCjJRNsL98AKsblCdvqmY
+        dD5myzVvCi/BHTBjlSQskSWzCu6Ix+KVWN2I2o6XYBYZP4nLAkIWGnMWQ2RR5Hszr5p/xOpm0/ZNQDgD
+        5waEjGsCu0jJ9TA3Slanfer3ywSEH2EOZ2XH4bbooqL8n/XxNXgeVjeQ9sfsOGS34XP4QswuQ7YeZYDk
+        qX9fPAb/jdUNo/01uzp/wuzwZIs3OR5ZO8h9IT0n20ivxHOxujl0eKZOY0q2HYQPxrwZSs9YGbfHr+EV
+        WN0Iqink8kPcH++Hfib0gHVxXzwHq0FXrUyW4nfwVbg13hClY2yLX8Zkl1WDrLoQkxSWt8cXYBq75FSo
+        NExe3V6MZ2M1oKqjmK3i32KqPe+EOd0ojZHXtaPRp75O0uQZpODJUzFHxbPOJDMk0fj5mP3easBUJ2Ee
+        NNlFyPmR1D3wbMIMyIU/Ci/HapBUp2GSyo7A3fCmKBMm9eaeg2diNSCqszC5BUk0ei6mpoRMgK3wSEya
+        ZzUIqrM2maYn4/Mw2YYyBrIf+0z8JVYXXbU1k3yWWgZ5I0gNAxmRVIX5BKZARHWhVVs2geBEzGergWAR
+        rI3ZbvkFVhdWtUsmECTl+Nm4Ico83AlTBirVZauLqdpVEwjSY+JZmOIlMoc0lHgSpuxTdfFU+2JyCb6P
+        e6FnDmBL/DD+DasLptpHc7+naEnqVQyygUpKNj0ef4rVBVIdgqmA/E7cAgdDfmwOWVyG1UVRHZopcpod
+        gxtjb0kZ58fgaVhdBNUhm/T2L2DaqPWubNnm+H5MJZbqx6vq1f4eU8S2F7sFOTH1KDwVqx+rqtc1qcVp
+        XLMLdnaRcD3MAselWP1IVZ3fVDVOI5vMpU6RxYy0h7bhpurSzNtAypRtg50hhyHM6FMdn2dhMgmTLt88
+        x2P1I1R1dPNQTeLcbbBpUket+gGqunTzgE0WYbO48Kc6WVO1+CnYZG3CE7D6o1V1fCab9q2YVnhNkaq9
+        FvNQnbzZJfg83h6bIW26PopuA6pOxxwzTjv0Zrg5vgtN/1WdjqmpsTM2gweAVKfr7/BxuAo2w+3QI8Cq
+        0/FCzDpcUzsEKQKSUkhpr1T90ao6PvOwfTk2t024rAxYuqpUf7iqjsfMsVdgPsWbIoVAn4gWAlWdrAkC
+        r8LmgkCwFLjq5E0R0ldjk0HAZiCqkzdB4JW4OjaJ7cBUJ2tyctKlqNmagzfAZ6ANQVUn4wW4JzaNLcFV
+        J2dOEu6ITbMOplb6mVj9CFUd3TTluQc2z93wKEzd9OqHqOpofg+bry4UboRJbfwNVj9EVUfzY5i37U6w
+        NR6Nvg2ojsfMpWQLNnV4aD5ugi/Cs7H6Qaq6ONN/YDfsFNvilzE916sfpaoLN4f0kovTKVJ5aF88B6sf
+        paoLN81Jb4qdYmXcHtM95QqsfpiqrtjMn6QLZ051jlRGzR9/LlY/TlVXbLoT3xs7SXKc0zDhGEy11OoH
+        qur85m26uVLji2F9TI/187D6gaq6fPMpkGpCnfwUWEbeBnbAb+GVWP1QVa3NwnpnPwXmsgGmx/ofsfqh
+        qlr7JUyr/86TLKecfjoWfRtQXZipzZHSfb1hI9wfk/lU/WBVvaY/xE2wN6yKu+BxaOsy1fnNG3MWBHtH
+        otoBmCYK1Q/XhZubJIdKkpadFeRswebfDLD9MBW67oi9I28DD8Xj0Zt1dE/C9KrP92IKvKasW2rP7YMv
+        xJdiniIpT/06fCO+Gd+B78PDMPUgP4dfxW9jxuQUTOn4X2MSVM7HP+OlmCKXCTiO23Q8CDNfeskt8e14
+        EVY/Xuc3E3fUDjTZrl0N8//TL+KGmPoPOeeRZJQ0md0QN8U8hbbBnfAR+CRMkElgSZ/8g/EI/Arm2zWB
+        I0HjYkzAMDlsdP+ATXUfHje5CXfFH2B1AXT5pj99Ju+syW5PAkmKy+ZQy8Z4B0x2aALGMzH18dO1+pP4
+        XUyQyGegvSlWbK5bZ+oGjMqtMK87l2B1EfS6thIAFkoy3NIkI7UlboF5su2BL8H34BcxHa3z1Mvnhm8O
+        V5uKXHfG3pPmCXli5Nu2uhB6TbsWAOYjwSHNatbD22PyR/Lm8F7MzlGCwpB7V2T9ptMpwothM8wTIU+B
+        6mLo1fYpACyPrFXkjSGfFI/C/TAFaVK1Og03quvSR8/AThQSHRf5psyAn4rVBdFhBICKrDVkcfJBmJ2O
+        VK9Ozf0+16zM9u6LcXDcFt+PQ4r2C3WoAeDarIVb4N6YFvg/xz4uLp6I2Z0ZHFk4eiz+GKsLM1QNANcl
+        u0rZXt4ds6icnIa+fEpmSzW/a7Akyn8I03u9ukBD0wAwP1k/yBMznwrZSksn7K6XrzsUE+QGS173Ho9p
+        sVRdoCFpAFg4CQZZXH46JusxmY3VNW3dLH7ms3jwZFU433t5Laou1BA0AIxGsh7vg8lCPR27VOI+bzBJ
+        +RbIzZ+01GyRVBer7xoAlkb21bOb8DRMdmJXumInYSo5E/I/7oTptTa0tFIDwPjI+YcnYA5EtX4fpcpW
+        JzoMT5NExETyLPRUF62PGgDGTw5DZcfpm9jy52Ua80jBXTEHToaQNmoAmBzJPkwiWkrdt/hpkG5Cjv1y
+        yCJP8sh/hdXF64sGgMmTN4IsurWWg5LMx81R5mEr/DR2ZXFnsRoApkfy8FP7IIeSqrGYtnnD3RNlBayD
+        z8WcP68uZJc1AEyXnMlPP8zPYAvrA8l0HMwJwaVyd0wFnT4dGDEAzIYcRmohGe0E7FxX4VmSZgsvwBRY
+        qC5o1zQAzJYko2X7eVYLzqmotC3KIkklmqyidikDrNIAMHvyNpAF56ToVmM0SXNEOEVgZQSyzZPz1Wdj
+        dXG7oAGgHfKJmYfKtA8bvRtzzkFGIAso98JUmOniKTEDQFtky/BNOM3jx0lYykK3LIEspLwM05m1usit
+        agBoj9S1TJ+G7NNXYzZus7uV+geyRPI2kLbMX8euvA0YANrl/pgeCdW4jdP0XrgfypjIoZA0vDgXqwve
+        kgaAtkkBm2w9Z7GuGr9xmNLpHg8eM1lUSVTN91XLtekNAO2TikRpwTbJ++idaELQBFgfX4vnYXXhZ60B
+        oBtkxymr9ZNKQssitguBEyJvAw/AnBOf5KvcKBoAukMOqKUx6yRqDaTw6QYoEyQXON1ZUoyhGoRZaADo
+        FqlnmTfKcQcBTwZOiRwGSYfc72ALbwMGgO6RILA/jvNz4ALcDmVKbIQZxD9hNSDT0gDQTZI+fCCOa7s5
+        iUdpsipTZFXcBb+HV2E1MJPWANBdcjDtEBzHm2TeJvZBmQGbYApFzKLOvAGg22SL8GisxnaxHoAyI9Kp
+        5WH4fawGZ1IaALpPWqGPI2PwcJQZk5zsd+BFWA3SuDUA9IMknS21RkVS2KUBchhkN5xGHrgBoD/kANFl
+        WI3zQjwOpSFujWlIeQlWAzYODQD9IR2wU+Nv1AXlk1AaI28Dj8CTsRq0pWoA6BdZUE6OSTXWKzL1CaVR
+        UlL6vTjuQhEGgP6RtPNRsk1TkkwaZg1MHfdTsRrAUTQA9I9km2ZbuRrv+fw9SgdIb/cP4FIWfJZpAOgn
+        WT9a7Gdj8lCkI2TBJw0ol9puKkkktonuJ3vhX7Ea98ocMJKOkSSQQ3ExAz3Xz2IOl0j/SGA/Eqtxr0w6
+        sHSQTOD0pT8dq4Gdz/ehJaH7yw640BTzs1A6TLrMfAQX2nMuTU32RukveTgcgdX4X9tPoXScvPY9Gc/A
+        apDneizmMIn0m23wd1jdA8tMc5v7oPSEO+PHcXlrA8n6yo0h/SefeHnTW17PirQrTxqxn4I9I0UjkjeQ
+        dlP5vstA/wizR5xy0zIcUvE3T/gsGP8Mcy+kIUgakz4Qnfw9Jp8FOWWYbML10MEeLkktT23K5JLknkhy
+        mYiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIhI31hppf8CsfpsTZ656ukAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="backClock.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAD45JREFUeF7tnXnQd+UYx0u7CFHaiESyToOUskUpW00kS2TfZc++FxlL2UIKEUJk
+        J8NEJtEmJIZEkpK0yJYUn+/kNU91vc/7PL/nt9znnM9n5vPPO/POPL9zn/s659z3dV/XSiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIi2zNt4Cb403w+uhiPSc6+Mj8Wg8C8/Fk/EA3AJFpKdsiYfhZfif
+        wgSC7VBEesRauBf+BKuJP9fjcGMUkR5wO/wgLu+pf23/jc9AEekwa+Kj8TSsJvp8fhhXQxHpIJvjwfgX
+        rCb4ivwK3gBFpEOsgXvgKVhN7IX6DVwHRaQjbIbvxkuxmtSL0QAg0hFWx93xRKwm8ygaAEQ6wKZ4IF6M
+        1UQeVQOASMNkhf7heAJWE3ipGgBEGiX5+2/Di7CavOPQACDSGKviQ/B4vAqriTsuDQAiDZHU3LfghVhN
+        2HFrABBpgDz1d8bk50/6qT9XA4DIjNkQ98MLsJqkk9QAIDIjVsEd8Vi8EqsJOmkNACIz4Ob4ejwfq4k5
+        LQ0AIlMk5bh2wG9hjuNWk3KaGgBEpsT6+Bo8D6vJOAsNACITZmW8Lx6DLTz152oAEJkgqcL7CkxBzmoC
+        zloDgMgEyFN/e/wqXoHV5GtBA4DImFkX98VzsJp0LWkAEBkj2+KX8F9YTbjWNACIjIGb4Ivwt1hNtFY1
+        AIgska0x3Xcux2qStawBQGREboT7YNpuVZOrCxoAREbgbngU/hOridUVDQAiiyCT5Tl4JlYTqmsaAEQW
+        yFZ4JHb9qT9XA4DICkjnnPTQ+yVWk6jLGgBE5uEu+An8B1YTqOsaAEQK1san4M+xmjh90QAgci3uiIfj
+        37GaNH3SACDyP66PT8SfYTVZ+qgBQAS2xPTK/ytWE6WvGgBk0KyFe+FPsJogfdcAIINlCzwEL8NqcgxB
+        A4AMjjXxMXgaVpNiSBoAZFBsjgfjX7CaEEPTACCDYA3cA0/BaiIMVQOA9J7N8D14KVaTYMgaAKS3rI67
+        40lY3fxqAJCecis8EC/G6sbXqzUASK9YDXfFH2B1w+s1/TomA1Kk89wS34YXYXWz63VN2vMT8O64MabM
+        2aoo0hlywz4Uj8ersLrRtTbXK4eeLsRfYZqWHoqvxsfhdrgppupx1lREmmITPABzA1c3uI5uKh/lbeo3
+        eBzmhOQbcG+8J26ASaUWmTp56u+MuTF96k/XND1JwD0dP4sJCntiiqekF6JvCjJRNsL98AKsblCdvqmY
+        dD5myzVvCi/BHTBjlSQskSWzCu6Ix+KVWN2I2o6XYBYZP4nLAkIWGnMWQ2RR5Hszr5p/xOpm0/ZNQDgD
+        5waEjGsCu0jJ9TA3Slanfer3ywSEH2EOZ2XH4bbooqL8n/XxNXgeVjeQ9sfsOGS34XP4QswuQ7YeZYDk
+        qX9fPAb/jdUNo/01uzp/wuzwZIs3OR5ZO8h9IT0n20ivxHOxujl0eKZOY0q2HYQPxrwZSs9YGbfHr+EV
+        WN0Iqink8kPcH++Hfib0gHVxXzwHq0FXrUyW4nfwVbg13hClY2yLX8Zkl1WDrLoQkxSWt8cXYBq75FSo
+        NExe3V6MZ2M1oKqjmK3i32KqPe+EOd0ojZHXtaPRp75O0uQZpODJUzFHxbPOJDMk0fj5mP3easBUJ2Ee
+        NNlFyPmR1D3wbMIMyIU/Ci/HapBUp2GSyo7A3fCmKBMm9eaeg2diNSCqszC5BUk0ei6mpoRMgK3wSEya
+        ZzUIqrM2maYn4/Mw2YYyBrIf+0z8JVYXXbU1k3yWWgZ5I0gNAxmRVIX5BKZARHWhVVs2geBEzGergWAR
+        rI3ZbvkFVhdWtUsmECTl+Nm4Ico83AlTBirVZauLqdpVEwjSY+JZmOIlMoc0lHgSpuxTdfFU+2JyCb6P
+        e6FnDmBL/DD+DasLptpHc7+naEnqVQyygUpKNj0ef4rVBVIdgqmA/E7cAgdDfmwOWVyG1UVRHZopcpod
+        gxtjb0kZ58fgaVhdBNUhm/T2L2DaqPWubNnm+H5MJZbqx6vq1f4eU8S2F7sFOTH1KDwVqx+rqtc1qcVp
+        XLMLdnaRcD3MAselWP1IVZ3fVDVOI5vMpU6RxYy0h7bhpurSzNtAypRtg50hhyHM6FMdn2dhMgmTLt88
+        x2P1I1R1dPNQTeLcbbBpUket+gGqunTzgE0WYbO48Kc6WVO1+CnYZG3CE7D6o1V1fCab9q2YVnhNkaq9
+        FvNQnbzZJfg83h6bIW26PopuA6pOxxwzTjv0Zrg5vgtN/1WdjqmpsTM2gweAVKfr7/BxuAo2w+3QI8Cq
+        0/FCzDpcUzsEKQKSUkhpr1T90ao6PvOwfTk2t024rAxYuqpUf7iqjsfMsVdgPsWbIoVAn4gWAlWdrAkC
+        r8LmgkCwFLjq5E0R0ldjk0HAZiCqkzdB4JW4OjaJ7cBUJ2tyctKlqNmagzfAZ6ANQVUn4wW4JzaNLcFV
+        J2dOEu6ITbMOplb6mVj9CFUd3TTluQc2z93wKEzd9OqHqOpofg+bry4UboRJbfwNVj9EVUfzY5i37U6w
+        NR6Nvg2ojsfMpWQLNnV4aD5ugi/Cs7H6Qaq6ONN/YDfsFNvilzE916sfpaoLN4f0kovTKVJ5aF88B6sf
+        paoLN81Jb4qdYmXcHtM95QqsfpiqrtjMn6QLZ051jlRGzR9/LlY/TlVXbLoT3xs7SXKc0zDhGEy11OoH
+        qur85m26uVLji2F9TI/187D6gaq6fPMpkGpCnfwUWEbeBnbAb+GVWP1QVa3NwnpnPwXmsgGmx/ofsfqh
+        qlr7JUyr/86TLKecfjoWfRtQXZipzZHSfb1hI9wfk/lU/WBVvaY/xE2wN6yKu+BxaOsy1fnNG3MWBHtH
+        otoBmCYK1Q/XhZubJIdKkpadFeRswebfDLD9MBW67oi9I28DD8Xj0Zt1dE/C9KrP92IKvKasW2rP7YMv
+        xJdiniIpT/06fCO+Gd+B78PDMPUgP4dfxW9jxuQUTOn4X2MSVM7HP+OlmCKXCTiO23Q8CDNfeskt8e14
+        EVY/Xuc3E3fUDjTZrl0N8//TL+KGmPoPOeeRZJQ0md0QN8U8hbbBnfAR+CRMkElgSZ/8g/EI/Arm2zWB
+        I0HjYkzAMDlsdP+ATXUfHje5CXfFH2B1AXT5pj99Ju+syW5PAkmKy+ZQy8Z4B0x2aALGMzH18dO1+pP4
+        XUyQyGegvSlWbK5bZ+oGjMqtMK87l2B1EfS6thIAFkoy3NIkI7UlboF5su2BL8H34BcxHa3z1Mvnhm8O
+        V5uKXHfG3pPmCXli5Nu2uhB6TbsWAOYjwSHNatbD22PyR/Lm8F7MzlGCwpB7V2T9ptMpwothM8wTIU+B
+        6mLo1fYpACyPrFXkjSGfFI/C/TAFaVK1Og03quvSR8/AThQSHRf5psyAn4rVBdFhBICKrDVkcfJBmJ2O
+        VK9Ozf0+16zM9u6LcXDcFt+PQ4r2C3WoAeDarIVb4N6YFvg/xz4uLp6I2Z0ZHFk4eiz+GKsLM1QNANcl
+        u0rZXt4ds6icnIa+fEpmSzW/a7Akyn8I03u9ukBD0wAwP1k/yBMznwrZSksn7K6XrzsUE+QGS173Ho9p
+        sVRdoCFpAFg4CQZZXH46JusxmY3VNW3dLH7ms3jwZFU433t5Laou1BA0AIxGsh7vg8lCPR27VOI+bzBJ
+        +RbIzZ+01GyRVBer7xoAlkb21bOb8DRMdmJXumInYSo5E/I/7oTptTa0tFIDwPjI+YcnYA5EtX4fpcpW
+        JzoMT5NExETyLPRUF62PGgDGTw5DZcfpm9jy52Ua80jBXTEHToaQNmoAmBzJPkwiWkrdt/hpkG5Cjv1y
+        yCJP8sh/hdXF64sGgMmTN4IsurWWg5LMx81R5mEr/DR2ZXFnsRoApkfy8FP7IIeSqrGYtnnD3RNlBayD
+        z8WcP68uZJc1AEyXnMlPP8zPYAvrA8l0HMwJwaVyd0wFnT4dGDEAzIYcRmohGe0E7FxX4VmSZgsvwBRY
+        qC5o1zQAzJYko2X7eVYLzqmotC3KIkklmqyidikDrNIAMHvyNpAF56ToVmM0SXNEOEVgZQSyzZPz1Wdj
+        dXG7oAGgHfKJmYfKtA8bvRtzzkFGIAso98JUmOniKTEDQFtky/BNOM3jx0lYykK3LIEspLwM05m1usit
+        agBoj9S1TJ+G7NNXYzZus7uV+geyRPI2kLbMX8euvA0YANrl/pgeCdW4jdP0XrgfypjIoZA0vDgXqwve
+        kgaAtkkBm2w9Z7GuGr9xmNLpHg8eM1lUSVTN91XLtekNAO2TikRpwTbJ++idaELQBFgfX4vnYXXhZ60B
+        oBtkxymr9ZNKQssitguBEyJvAw/AnBOf5KvcKBoAukMOqKUx6yRqDaTw6QYoEyQXON1ZUoyhGoRZaADo
+        FqlnmTfKcQcBTwZOiRwGSYfc72ALbwMGgO6RILA/jvNz4ALcDmVKbIQZxD9hNSDT0gDQTZI+fCCOa7s5
+        iUdpsipTZFXcBb+HV2E1MJPWANBdcjDtEBzHm2TeJvZBmQGbYApFzKLOvAGg22SL8GisxnaxHoAyI9Kp
+        5WH4fawGZ1IaALpPWqGPI2PwcJQZk5zsd+BFWA3SuDUA9IMknS21RkVS2KUBchhkN5xGHrgBoD/kANFl
+        WI3zQjwOpSFujWlIeQlWAzYODQD9IR2wU+Nv1AXlk1AaI28Dj8CTsRq0pWoA6BdZUE6OSTXWKzL1CaVR
+        UlL6vTjuQhEGgP6RtPNRsk1TkkwaZg1MHfdTsRrAUTQA9I9km2ZbuRrv+fw9SgdIb/cP4FIWfJZpAOgn
+        WT9a7Gdj8lCkI2TBJw0ol9puKkkktonuJ3vhX7Ea98ocMJKOkSSQQ3ExAz3Xz2IOl0j/SGA/Eqtxr0w6
+        sHSQTOD0pT8dq4Gdz/ehJaH7yw640BTzs1A6TLrMfAQX2nMuTU32RukveTgcgdX4X9tPoXScvPY9Gc/A
+        apDneizmMIn0m23wd1jdA8tMc5v7oPSEO+PHcXlrA8n6yo0h/SefeHnTW17PirQrTxqxn4I9I0UjkjeQ
+        dlP5vstA/wizR5xy0zIcUvE3T/gsGP8Mcy+kIUgakz4Qnfw9Jp8FOWWYbML10MEeLkktT23K5JLknkhy
+        mYiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIhI31hppf8CsfpsTZ656ukAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
